<?xml version="1.0"?>
<package>
  <name>revopoint_imu_fusion</name>
  <version>1.0.0</version>
  <description>IMUFusion method for Revopoint</description>
  <maintainer email="yajianghuang@dingtalk.com">huangyajiang</maintainer>
  <license>" "</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>catkin</run_depend>
  <run_depend>roscpp</run_depend>

</package>
