<?xml version="1.0"?>
<package format="3">
  <name>r3live</name>
  <version>1.0.0</version>
  <description>R3LIVE: A Robust, Real-time, RGB-colored, LiDAR-Inertial-Visual tightly-coupled state Estimation and mapping package</description>
  <maintainer email="ziv.lin.ljr@gmail.com">Jiarong.Lin</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>livox_ros_driver2</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>

</package>
